tests/hulk/errors/semantic/redeclared_function.hulk
function foo(x: Number): Number { x; }
function foo(y: Number): Number { y + 1; }

print(foo(5));
